tests/error/linear_errors/field_copy_nested1.err
Error: Copy violation (at $FILE:21:11)
   | 
19 |     measure(s.q)
20 |     s.q = s.x.q
21 |     return s
   |            ^ Variable `s` with non-copyable type `MyStruct1` cannot be
   |              returned ...

Note:
   | 
19 |     measure(s.q)
20 |     s.q = s.x.q
   |           ----- ... since the member `s.x.q` with non-copyable type `qubit`
   |                 was already moved here

Guppy compilation failed due to 1 previous error
